# MKM

./: CLAUDE.md  Cargo.toml  IMPLEMENTATION.md  architecture.md
.github/workflows/: ci.yml
docs/: design.md  dynamics.md  engineering.md  model.md  parameters.md  roadmap.md  scenarios.md  theory.md  verification.md
mkm-cli/: Cargo.toml
mkm-cli/src/: main.rs
mkm-core/: Cargo.toml
mkm-core/src/: coupling.rs  edge.rs  energy.rs  events.rs  id.rs  inbox.rs  invariants.rs  layer.rs  lib.rs  lifecycle.rs  math.rs  params.rs  ringbuffer.rs  snapshot.rs  state.rs  vertex.rs
mkm-core/tests/: invariants_static.rs  serde_roundtrip.rs
mkm-sim/: Cargo.toml
mkm-sim/benches/: edges_100k.rs
mkm-sim/src/: bridge_registry.rs  components.rs  init.rs  lib.rs  metrics.rs  plugin.rs  resources.rs  rng.rs  scenarios.rs  tick.rs
mkm-sim/src/systems/: bridges.rs  crisis.rs  history.rs  ingest.rs  mod.rs  output.rs  plasticity.rs  propagate.rs
mkm-sim/tests/: bridges_numeric.rs  determinism.rs  energy_bookkeeping.rs  hysteresis.rs  mass_damping.rs  propagate_numeric.rs
mkm-viz/: Cargo.toml
mkm-viz/src/: lib.rs
