[workspace]
members = [
    "mkm-core",
    "mkm-sim",
    "mkm-viz",
    "mkm-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["MKM Project"]
license = "MIT"

[workspace.dependencies]
# ECS framework
bevy = { version = "0.15", default-features = false }

# Parallelism
rayon = "1.10"

# Math
glam = { version = "0.29", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rmp-serde = "1"

# RNG
rand = "0.8"
rand_chacha = "0.3"

# Error handling
thiserror = "2"

# Misc
smallvec = { version = "1", features = ["serde"] }

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
